basic structure, a dictionary post, added custom sass, setup github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,63 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Sněženky a hackeři
+email: mzeravik@gmail.com
+lang: cs-CZ
+description: >- # this means to ignore newlines until "baseurl:"
+  Počítačový kroužek Sněženky a hackeři při ZŠ Samotíšky.
+description_en: >- # this means to ignore newlines until "baseurl:"
+  A computer course for kids in our local elementary school.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://vecernik.github.io/sah" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: jekyllrb
+google_analytics: false
+
+# Build settings
+markdown: kramdown
 theme: jekyll-theme-cayman
+plugins:
+  - jekyll-feed
+  - jekyll-titles-from-headings
+
+sass:
+  style: compact
+  load_paths:
+    - assets/css
+
+github:
+  - project_tagline: Počítačový kroužek Sněženky a hackeři při ZŠ Samotíšky. A computer course for kids in our local elementary school.
+  - username:  vecernik
+  - is_project_page: true
+  - repository_url: https://github.com/vecernik/sah
+
+titles_from_headings:
+  enabled:     true
+  strip_title: false
+  collections: false
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+exclude:
+  - .idea
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+
