--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ title: Sněženky a hackeři
 email: mzeravik@gmail.com
 lang: cs-CZ
 description: >- # this means to ignore newlines until "baseurl:"
-  Počítačový kroužek Sněženky a hackeři při ZŠ Samotíšky.
+  Počítačový kroužek pro děti při ZŠ Samotíšky.
 description_en: >- # this means to ignore newlines until "baseurl:"
   A computer course for kids in our local elementary school.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://vecernik.github.io/sah" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/sah" # the subpath of your site, e.g. /blog
+url: "https://vecernik.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 google_analytics: false
 
